--- a/new.html
+++ b/new.html
@@ -44,6 +44,14 @@ if(localStorage.getItem("musicPlaying")==="yes"){
     music.play();
 }
 </script>
+    <script>
+const music = document.getElementById("bgMusic");
+if(localStorage.getItem("playMusic")==="yes"){
+    music.play();
+}
+</script>
+
 
 </body>
 </html>
+
